--- a/index.html
+++ b/index.html
@@ -4,18 +4,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Classes</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/8.3.2/mocha.min.css">
+  <title>Weather</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div id="mocha"></div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/8.3.2/mocha.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/4.3.4/chai.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/sinon.js/10.0.1/sinon.min.js"></script>
-  <script>
-    const logSpy = sinon.spy(console, 'log')
-    const clock = sinon.useFakeTimers()
-  </script>
+  <header>
+    <h1>Current Weather</h1>
+  </header>
+  <main>
+    <section id="weather"></section>
+    <form>
+      <input name="search" id="weather-search" type="text" placeholder=" ">
+      <label for="weather-search">
+        Enter location
+      </label>
+      <button type="submit">Search</button>
+    </form>
+  </main>
   <script src="index.js"></script>
   <script src="tests.js"></script>
 </body>
